# cherry

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-17-daemon-cache-implementation.md
docs/superpowers/specs/: 2026-07-17-daemon-cache-design.md
src/: app.rs  apply.rs  daemon.rs  loader.rs  main.rs  wallpapers.rs
src/ui/: hints.rs  list.rs  mod.rs  preview.rs  search.rs  theme.rs
