[package]
name = "cherry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cherry"
path = "src/main.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu", "wayland", "default_fonts"] }
egui-phosphor = { version = "0.7", features = ["regular"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
