[package]
name = "cherry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cherry"
path = "src/main.rs"

[dependencies]
egui = "0.29"
egui-wgpu = "0.29"
wgpu = { version = "22", features = [] }
egui-winit = { version = "0.29", default-features = false, features = ["wayland"] }
winit = { version = "0.30", default-features = false, features = ["wayland", "rwh_06"] }
pollster = "0.3"
egui-phosphor = { version = "0.7", features = ["regular"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
